--- a/app/src/main/res/layout/fragment_old_stock_detail.xml
+++ b/app/src/main/res/layout/fragment_old_stock_detail.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/kirito" />
 
     <TextView
-        android:id="@+id/tv"
+        android:id="@+id/tv_oldstock_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -78,8 +78,8 @@
         app:icon="@drawable/ic_plus"
         app:iconSize="24dp"
         app:cornerRadius="10dp"
-        app:layout_constraintStart_toStartOf="@+id/tv"
-        app:layout_constraintTop_toBottomOf="@+id/tv" />
+        app:layout_constraintStart_toStartOf="@+id/tv_oldstock_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_oldstock_name" />
 
     <LinearLayout
         android:layout_width="0dp"
