--- a/app/src/main/res/layout/include_old_stock_add_item_photo.xml
+++ b/app/src/main/res/layout/include_old_stock_add_item_photo.xml
@@ -5,46 +5,50 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/tv_label_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             android:text="Adding item to voucher"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-            android:layout_margin="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Close"
-            android:textColor="@color/grey_body"
-            app:strokeWidth="1dp"
-            app:strokeColor="@color/grey_body"
-            app:elevation="8dp"
-            app:backgroundTint="@color/white"
-            android:textAllCaps="false"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:insetRight="0dp"
+            android:layout_margin="16dp"
             android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            android:text="Close"
+            android:textAllCaps="false"
+            android:textColor="@color/grey_body"
+            app:backgroundTint="@color/white"
+            app:elevation="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="16dp"/>
+            app:strokeColor="@color/grey_body"
+            app:strokeWidth="1dp" />
+
         <ImageView
             android:id="@+id/iv_three_dots_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/iv_upload_image"
-            app:layout_constraintEnd_toEndOf="@id/iv_upload_image"
             android:elevation="1dp"
+            android:src="@drawable/ic_three_dots_menu"
             android:visibility="gone"
-            android:src="@drawable/ic_three_dots_menu"/>
+            app:layout_constraintEnd_toEndOf="@id/iv_upload_image"
+            app:layout_constraintTop_toTopOf="@id/iv_upload_image" />
+
         <ImageView
             android:id="@+id/iv_upload_image"
             android:layout_width="328dp"
@@ -74,61 +78,66 @@
             android:id="@+id/tv_label_calculated_method"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="What is your calculation method?"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/grey_black"
             android:textStyle="bold"
-            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/iv_upload_image"
             app:layout_constraintTop_toBottomOf="@id/iv_upload_image" />
+
         <RadioGroup
             android:id="@+id/radio_gp_calculation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center_horizontal"
-            app:layout_constraintTop_toBottomOf="@id/tv_label_calculated_method"
-            app:layout_constraintStart_toStartOf="@id/tv_label_calculated_method">
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="@id/tv_label_calculated_method"
+            app:layout_constraintTop_toBottomOf="@id/tv_label_calculated_method">
+
             <RadioButton
                 android:id="@+id/radio_kpy"
                 android:layout_width="187dp"
                 android:layout_height="wrap_content"
-                android:text="KPY"
                 android:layout_gravity="center"
-                android:gravity="center"
                 android:background="@drawable/boarder_radio_button"
-                android:textAppearance="@style/TextAppearance.ShweMi.Body2"/>
+                android:gravity="center"
+                android:text="KPY"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2" />
+
             <RadioButton
                 android:id="@+id/radio_gm"
                 android:layout_width="187dp"
                 android:layout_height="wrap_content"
-                android:text="Gm"
                 android:layout_gravity="center"
-                android:gravity="center"
                 android:background="@drawable/boarder_radio_button"
-                android:textAppearance="@style/TextAppearance.ShweMi.Body2"/>
+                android:gravity="center"
+                android:text="Gm"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2" />
         </RadioGroup>
 
         <TextView
             android:id="@+id/tv_label_enter_weight"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="Enter the weight of the gold and gems?"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/grey_black"
             android:textStyle="bold"
-            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/radio_gp_calculation"
             app:layout_constraintTop_toBottomOf="@id/radio_gp_calculation" />
+
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_weight"
+            android:id="@+id/til_weight_gm"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:visibility="gone"
             app:boxCornerRadiusBottomEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
             app:boxCornerRadiusTopEnd="8dp"
@@ -138,13 +147,13 @@
             app:errorEnabled="false"
             app:expandedHintEnabled="false"
             app:hintEnabled="false"
-            app:layout_constraintTop_toBottomOf="@id/tv_label_enter_weight"
-            app:layout_constraintStart_toStartOf="@id/tv_label_enter_weight"
             app:layout_constraintEnd_toEndOf="@id/radio_gp_calculation"
+            app:layout_constraintStart_toStartOf="@id/tv_label_enter_weight"
+            app:layout_constraintTop_toBottomOf="@id/tv_label_enter_weight"
             app:suffixText="gm">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_weight"
+                android:id="@+id/edt_weight_gm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="0.00"
@@ -154,22 +163,125 @@
                 android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_weight_kyat"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxStrokeColor="@color/grey_placeholder"
+            app:boxStrokeWidth="1dp"
+            app:errorEnabled="false"
+            app:expandedHintEnabled="false"
+            app:hintEnabled="false"
+            app:layout_constraintEnd_toStartOf="@+id/til_weight_pae"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="@+id/radio_gp_calculation"
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_enter_weight"
+            app:suffixText="K">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_weight_kyat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="0.00"
+                android:inputType="numberDecimal"
+                android:textAlignment="textStart"
+                android:textColorHint="@color/grey_placeholder"
+                android:textStyle="bold" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_weight_pae"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxStrokeColor="@color/grey_placeholder"
+            app:boxStrokeWidth="1dp"
+            app:errorEnabled="false"
+            app:expandedHintEnabled="false"
+            app:hintEnabled="false"
+            app:layout_constraintEnd_toStartOf="@+id/til_weight_ywae"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/til_weight_kyat"
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_enter_weight"
+            app:suffixText="P">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_weight_pae"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="0.00"
+                android:inputType="numberDecimal"
+                android:textAlignment="textStart"
+                android:textColorHint="@color/grey_placeholder"
+                android:textStyle="bold" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_weight_ywae"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxStrokeColor="@color/grey_placeholder"
+            app:boxStrokeWidth="1dp"
+            app:errorEnabled="false"
+            app:expandedHintEnabled="false"
+            app:hintEnabled="false"
+            app:layout_constraintEnd_toEndOf="@+id/radio_gp_calculation"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/til_weight_pae"
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_enter_weight"
+            app:suffixText="Y">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_weight_ywae"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="0.00"
+                android:inputType="numberDecimal"
+                android:textAlignment="textStart"
+                android:textColorHint="@color/grey_placeholder"
+                android:textStyle="bold" />
+        </com.google.android.material.textfield.TextInputLayout>
+<androidx.constraintlayout.widget.Barrier
+    android:id="@+id/barrier"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:constraint_referenced_ids="til_weight_gm,til_weight_kyat"
+    app:barrierDirection="bottom"/>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_add"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
             android:text="Add"
             android:textAlignment="center"
-            android:enabled="false"
             android:textAllCaps="false"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:insetRight="0dp"
-            android:insetLeft="0dp"
-            app:layout_constraintTop_toBottomOf="@id/til_weight"
-            app:layout_constraintStart_toStartOf="@id/til_weight"
-            app:layout_constraintEnd_toEndOf="@id/til_weight"
-            android:layout_marginTop="16dp"/>
+            app:layout_constraintEnd_toEndOf="@id/radio_gp_calculation"
+            app:layout_constraintStart_toStartOf="@id/radio_gp_calculation"
+            app:layout_constraintTop_toBottomOf="@id/barrier" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
