--- a/app/src/main/res/layout/fragment_old_stock_bucket_list.xml
+++ b/app/src/main/res/layout/fragment_old_stock_bucket_list.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fillViewport="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<include
-    android:id="@+id/include_old_stock_no_item_state"
-    layout="@layout/include_old_stock_no_item_state"
-    />
-    <include
-        android:id="@+id/include_old_stock_with_items"
-        layout="@layout/include_old_stock_with_items"
-        android:visibility="gone"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <include
+            android:id="@+id/include_old_stock_no_item_state"
+            layout="@layout/include_old_stock_no_item_state"
+            />
+        <include
+            android:id="@+id/include_old_stock_with_items"
+            layout="@layout/include_old_stock_with_items"
+            android:visibility="gone"
 
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
