--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,6 @@
     <color name="hintTextColor">#9AA5B1</color>
     <color name="secondaryTextColor">#3E4C59</color>
 
+    <color name="pink_100">#F9E9EA</color>
+
 </resources>
